[too.poetry]
name = "matrix-operator"
version = "0.1.0"
description = "Data analysis demo showing pip vs Poetry dependency managment"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.0"
requests = "^2.31"
matplotlib = "^3.7"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"