# poetry install --no-root
# poetry run python loading.py
[tool.poetry]
name = "matrix-operator"
version = "0.1.0"
description = "Matrix data analysis tool"
authors = ["your_login <your_login@student.42.fr>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.0.0"
requests = "^2.30.0"
matplotlib = "^3.7.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
